--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -4,3 +4,4 @@ TODO
 * style the pagination controls
 * owner's tweets should show up on list
 * create "whitelist" of users to bypass the hashtag filter and display all tweets
+* (?) consider the option of using a filesystem based cache for those just starting up
