--- a/trunk/TODO.txt
+++ b/trunk/TODO.txt
@@ -1,8 +1,9 @@
 TODO
 ====
-
-* style the pagination controls
-* owner's tweets should show up on list
-* create "whitelist" of users to bypass the hashtag filter and display all tweets
-* (?) consider the option of using a filesystem based cache for those just starting up
-* (?) deleted tweets should be removed from the db
+* Create "whitelist" of users to bypass the hashtag filter and display all tweets
+* Consider the option of using a filesystem based cache for those just starting up
+* Deleted tweets should be removed from the db
+* Javascript validation for setup wizard needs to be fixed
+* @replies should link to user's Twitter pages
+* Create a Twitster module that can be included within another page
+* Filter by multiple hash tag
